--- a/coc-settings.json
+++ b/coc-settings.json
@@ -4,6 +4,12 @@
       "rust"
     ]
   },
+  "python": {
+    "linting": {
+      "flake8Enabled": true,
+      "pylintEnabled": true
+    }
+  },
   "rust-analyzer": {
     "serverPath": "/home/felix/.local/bin/rust-analyzer",
     "cargo.loadOutDirsFromCheck": true,
