--- a/coc-settings.json
+++ b/coc-settings.json
@@ -7,7 +7,8 @@
   "python": {
     "linting": {
       "flake8Enabled": true,
-      "pylintEnabled": true
+      "pylintEnabled": true,
+      "mypyEnabled": true
     }
   },
   "rust-analyzer": {
